# elementary

./: CMakeLists.txt  README.md
.github/workflows/: ContinuousIntegration.yml
cmake/: develop_dependencies.cmake  elementary_dependencies.cmake  release_dependencies.cmake  unit_testing.cmake
python/src/: ElementID.python.cpp  FundamentalParticleID.python.cpp  IsotopeID.python.cpp  Level.python.cpp  NucleusID.python.cpp  NuclideID.python.cpp  ParticleID.python.cpp  ParticlePairID.python.cpp  ParticleTupleID.python.cpp  ReactionID.python.cpp  ReactionType.python.cpp  SpecialDataID.python.cpp  SpecialDataType.python.cpp  absorb.python.cpp  definitions.hpp  elementary.python.cpp  emit.python.cpp  fromEndfReactionNumber.python.cpp  resolve.python.cpp  toEndfReactionNumber.python.cpp
python/test/: Test_elementary_ElementID.py  Test_elementary_FundamentalParticleID.py  Test_elementary_IsotopeID.py  Test_elementary_Level.py  Test_elementary_NucleusID.py  Test_elementary_NuclideID.py  Test_elementary_ParticleID.py  Test_elementary_ParticlePairID.py  Test_elementary_ParticleTupleID.py  Test_elementary_ReactionID.py  Test_elementary_ReactionType.py  Test_elementary_SpecialDataID.py  Test_elementary_SpecialDataType.py  Test_elementary_absorb.py  Test_elementary_emit.py  Test_elementary_from_endf_reaction_number.py  Test_elementary_resolve.py  Test_elementary_to_endf_reaction_number.py
src/: elementary.hpp
src/elementary/: ElementID.hpp  FundamentalParticleID.hpp  Identifier.hpp  IsotopeID.hpp  JoinedIdentifier.hpp  Level.hpp  LevelContinuum.hpp  LevelNumber.hpp  NucleusID.hpp  NuclideID.hpp  ParticleID.hpp  ParticlePairID.hpp  ParticleTupleID.hpp  ReactionID.hpp  ReactionNumber.hpp  ReactionType.hpp  SpecialDataID.hpp  SpecialDataType.hpp  absorb.hpp  emit.hpp  fromEndfReactionNumber.hpp  macros.hpp  resolve.hpp  toEndfReactionNumber.hpp
src/elementary/ElementID/: Entry.hpp
src/elementary/ElementID/src/: ctor.hpp  lookup.hpp  register.hpp
src/elementary/ElementID/test/: CMakeLists.txt  ElementID.test.cpp
src/elementary/FundamentalParticleID/: Entry.hpp
src/elementary/FundamentalParticleID/src/: ctor.hpp  lookup.hpp  register.hpp
src/elementary/FundamentalParticleID/test/: CMakeLists.txt  FundamentalParticleID.test.cpp
src/elementary/Identifier/src/: ctor.hpp  validate.hpp
src/elementary/Identifier/test/: CMakeLists.txt  Identifier.test.cpp
src/elementary/IsotopeID/src/: ctor.hpp  matchIdentifier.hpp  register.hpp  verifyMass.hpp
src/elementary/IsotopeID/test/: CMakeLists.txt  IsotopeID.test.cpp
src/elementary/JoinedIdentifier/src/: ctor.hpp  generate.hpp
src/elementary/JoinedIdentifier/test/: CMakeLists.txt  JoinedIdentifier.test.cpp
src/elementary/Level/src/: ctor.hpp  matchLevel.hpp  register.hpp  verifyLevel.hpp
src/elementary/Level/test/: CMakeLists.txt  Level.test.cpp
src/elementary/LevelContinuum/src/: ctor.hpp  matchContinuum.hpp  register.hpp  verifyLevels.hpp
src/elementary/LevelContinuum/test/: CMakeLists.txt  LevelContinuum.test.cpp
src/elementary/LevelNumber/src/: ctor.hpp  matchLevel.hpp  register.hpp  verifyLevel.hpp
src/elementary/LevelNumber/test/: CMakeLists.txt  LevelNumber.test.cpp
src/elementary/NucleusID/src/: ctor.hpp  matchIdentifier.hpp  register.hpp
src/elementary/NucleusID/test/: CMakeLists.txt  NucleusID.test.cpp
src/elementary/NuclideID/src/: ctor.hpp  matchIdentifier.hpp  register.hpp  verifyLevel.hpp  verifyMass.hpp
src/elementary/NuclideID/test/: CMakeLists.txt  NuclideID.test.cpp
src/elementary/ParticleID/src/: ctor.hpp  matchIdentifier.hpp
src/elementary/ParticleID/test/: CMakeLists.txt  ParticleID.test.cpp
src/elementary/ParticlePairID/src/: ctor.hpp  validate.hpp
src/elementary/ParticlePairID/test/: CMakeLists.txt  ParticlePairID.test.cpp
src/elementary/ParticleTupleID/src/: ctor.hpp  generate.hpp  particles.hpp  validate.hpp
src/elementary/ParticleTupleID/test/: CMakeLists.txt  (+1 more)
src/elementary/ReactionType/: Entry.hpp
src/elementary/SpecialDataType/: Entry.hpp
src/elementary/src/: emit.hpp  fromEndfReactionNumber.hpp  join.hpp  overload.hpp  resolve.hpp  split.hpp  toEndfReactionNumber.hpp  tolower.hpp
src/elementary/test/: CMakeLists.txt  absorb.test.hpp  elementary.test.cpp  emit.test.hpp  fromEndfReactionNumber.test.hpp  join.test.hpp  resolve.test.hpp  toEndfReactionNumber.test.hpp
src/utility/: join.hpp  overload.hpp  split.hpp  tolower.hpp
src/utility/test/: split.test.hpp  utility.test.cpp
(+24 files in other folders)
